Change Kiev to Kyiv in i18n message source
Refs:
* https://mfa.gov.ua/en/page/open/id/5418
* https://www.youtube.com/watch?v=brWD0ZP2s9A
* https://www.kyivpost.com/ukraine-politics/kyivnotkiev-campaign-asks-foreign-media-to-change-their-spelling-of-ukraines-capital.html

--- a/messages.pot
+++ b/messages.pot
@@ -3904,7 +3904,7 @@ msgstr ""
 
 #: templates/venue.html:106
 msgid ""
-"All neighbouring capital cities Vienna, Prague, Budapest, Warsaw and Kiev"
+"All neighbouring capital cities Vienna, Prague, Budapest, Warsaw and Kyiv"
 " have direct bus connections."
 msgstr ""
 
@@ -3926,7 +3926,7 @@ msgstr ""
 
 #: templates/venue.html:118
 msgid ""
-"All neighboring capital cities Vienna, Prague, Budapest, Warsaw and Kiev "
+"All neighboring capital cities Vienna, Prague, Budapest, Warsaw and Kyiv "
 "have direct train connections."
 msgstr ""
 
