Change Kiev to Kyiv in i18n message translation
Refs:
* https://mfa.gov.ua/en/page/open/id/5418
* https://www.youtube.com/watch?v=brWD0ZP2s9A
* https://www.kyivpost.com/ukraine-politics/kyivnotkiev-campaign-asks-foreign-media-to-change-their-spelling-of-ukraines-capital.html

--- a/translations/sk/LC_MESSAGES/messages.po
+++ b/translations/sk/LC_MESSAGES/messages.po
@@ -4710,7 +4710,7 @@ msgstr "Autobusom"
 
 #: templates/venue.html:106
 msgid ""
-"All neighbouring capital cities Vienna, Prague, Budapest, Warsaw and Kiev"
+"All neighbouring capital cities Vienna, Prague, Budapest, Warsaw and Kyiv"
 " have direct bus connections."
 msgstr ""
 "Všetky okolité hlavné mestá - Viedeň, Praha, Budapešť, Varšava aj Kyjev -"
@@ -4741,7 +4741,7 @@ msgstr "Vlakom"
 
 #: templates/venue.html:118
 msgid ""
-"All neighboring capital cities Vienna, Prague, Budapest, Warsaw and Kiev "
+"All neighboring capital cities Vienna, Prague, Budapest, Warsaw and Kyiv "
 "have direct train connections."
 msgstr ""
 "Z hlavných miest všetkých susedných krajín, teda z Viedne, Prahy, "
