--- a/translations/sk/LC_MESSAGES/messages.po
+++ b/translations/sk/LC_MESSAGES/messages.po
@@ -4399,7 +4399,7 @@ msgstr ""
 
 #: templates/sponsoring.html:200
 msgid "Media Partners"
-msgstr "Medálni partneri"
+msgstr "Mediálni partneri"
 
 #: templates/sponsoring.html:234
 msgid "Partners"
