--- a/translations/sk/LC_MESSAGES/messages.po
+++ b/translations/sk/LC_MESSAGES/messages.po
@@ -81,7 +81,7 @@ msgid ""
 "like to know more, talk to us during the conference..."
 msgstr ""
 "Od roku 2015 sme zorganizovali desiatky stretnuti a projektov. Ak chcete "
-"vedieť viac, pozrite sa nižšie, na čom pracujeme."
+"vedieť viac, pozrite sa nižšie, na čom pracujeme..."
 
 #: templates/about-us.html:37
 msgid "Or visit our website"
